# Smart_Calculator

./: CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  Makefile  reference.html  reference_rus.html
src/controller/: main_controller.h
src/img/: icon.icns
src/model/: main_model.cc
src/rcs/qcustomplot/: CMakeLists.txt
src/src/: main.cc  main.cpp
src/src/controller/: main_controller.h
src/src/model/: main_model.cc  main_model.cpp  main_model.h
src/src/view/: main_window.cc  main_window.h  main_window.ui  mainwindow.cc  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/tests/: main_model_test.cc  test_model.cc
src/view/: main_window.h
